force-app/main/default/objects/Account/fields/CB_Capture_Boolean_Test__c.field-meta.xml
<CustomField>
    <fullName>CB_Capture_Boolean_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CB Capture Boolean Test</label>
    <type>Checkbox</type>
</CustomField>