force-app/main/default/objects/Account/fields/CB_Capture_Inactive_Account__c.field-meta.xml
<CustomField>
    <fullName>CB_Capture_Inactive_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clearbit-identified prospect account not being worked by sales, with high intent web engagement</description>
    <inlineHelpText>Clearbit-identified prospect account not being worked by sales, with high intent web engagement</inlineHelpText>
    <label>CB Capture: Inactive Account</label>
    <type>Checkbox</type>
</CustomField>