force-app/main/default/objects/Account/fields/CB_Capture_Lost_Opp_Account__c.field-meta.xml
<CustomField>
    <fullName>CB_Capture_Lost_Opp_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clearbit-identified account with a lost opportunity showing high intent web engagement</description>
    <inlineHelpText>Clearbit-identified account with a lost opportunity showing high intent web engagement</inlineHelpText>
    <label>CB Capture: Lost Opp Account</label>
    <type>Checkbox</type>
</CustomField>