force-app/main/default/objects/Account/fields/CB_Capture_New_Account__c.field-meta.xml
<CustomField>
    <fullName>CB_Capture_New_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Clearbit-identified new account with high intent web engagement</inlineHelpText>
    <label>CB Capture: New Account</label>
    <type>Checkbox</type>
</CustomField>