force-app/main/default/objects/Account/fields/Change_to_Terms_Enable_Auto_Debit_Setup__c.field-meta.xml
<CustomField>
    <fullName>Change_to_Terms_Enable_Auto_Debit_Setup__c</fullName>
    <description>Used by &quot;Account Direct Debit Approval&quot; flow</description>
    <label>Change to Terms Enable Auto Debit Setup?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>