force-app/main/default/objects/Account/fields/Changes_to_Enable_Auto_Debit__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Enable_Auto_Debit__c</fullName>
    <description>Used by &quot;Account Direct Debit Approval&quot; flow</description>
    <label>Changes to Enable Auto Debit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>