force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <inlineHelpText>Does partner have clients hiring cross-border and remote?</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>