force-app/main/default/objects/Account/fields/Channel_Geo__c.field-meta.xml
<CustomField>
    <fullName>Channel_Geo__c</fullName>
    <inlineHelpText>What countries are the majority of partner’s clients active in?</inlineHelpText>
    <label>Channel Geo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER - California</fullName>
            </value>
            <value>
                <fullName>AMER - Canada East</fullName>
            </value>
            <value>
                <fullName>AMER - Canada West</fullName>
            </value>
            <value>
                <fullName>AMER - Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>AMER - Midwest</fullName>
            </value>
            <value>
                <fullName>AMER - Mountain West</fullName>
            </value>
            <value>
                <fullName>AMER - Northeast</fullName>
            </value>
            <value>
                <fullName>AMER - Pacific Northwest</fullName>
            </value>
            <value>
                <fullName>AMER - Southeast</fullName>
            </value>
            <value>
                <fullName>AMER - Southwest</fullName>
            </value>
            <value>
                <fullName>AMER - Tri State</fullName>
            </value>
            <value>
                <fullName>EMEA - BeNeLux</fullName>
            </value>
            <value>
                <fullName>EMEA - CEE</fullName>
            </value>
            <value>
                <fullName>EMEA - CIS</fullName>
            </value>
            <value>
                <fullName>EMEA - DACH</fullName>
            </value>
            <value>
                <fullName>EMEA - Israel</fullName>
            </value>
            <value>
                <fullName>EMEA - MEA</fullName>
            </value>
            <value>
                <fullName>EMEA - Nordics</fullName>
            </value>
            <value>
                <fullName>EMEA - SEE</fullName>
            </value>
            <value>
                <fullName>EMEA - UKI</fullName>
            </value>
            <value>
                <fullName>APAC - South Asia</fullName>
            </value>
            <value>
                <fullName>APAC - Southeast Asia</fullName>
            </value>
            <value>
                <fullName>APAC - Northeast Asia</fullName>
            </value>
            <value>
                <fullName>APAC - Central Asia</fullName>
            </value>
            <value>
                <fullName>APAC - Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>