force-app/main/default/objects/Account/fields/Channel_Grip__c.field-meta.xml
<CustomField>
    <fullName>Channel_Grip__c</fullName>
    <inlineHelpText>Does partner have sales with capacity to sell Oyster?</inlineHelpText>
    <label>Channel Grip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>