force-app/main/default/objects/Account/fields/Checks__c.field-meta.xml
<CustomField>
    <fullName>Checks__c</fullName>
    <description>To document the customer tech stack</description>
    <inlineHelpText>Specify check systems or services utilized by the customer for employee screening.</inlineHelpText>
    <label>Checks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accurate</fullName>
            </value>
            <value>
                <fullName>Certn</fullName>
            </value>
            <value>
                <fullName>Checkr/GoodHire</fullName>
            </value>
            <value>
                <fullName>Crosschq</fullName>
            </value>
            <value>
                <fullName>First Advantage</fullName>
            </value>
            <value>
                <fullName>HireRight</fullName>
            </value>
            <value>
                <fullName>Infomart</fullName>
            </value>
            <value>
                <fullName>Refapp</fullName>
            </value>
            <value>
                <fullName>Sterling</fullName>
            </value>
            <value>
                <fullName>TrustedEmployees</fullName>
            </value>
            <value>
                <fullName>Veremark</fullName>
            </value>
            <value>
                <fullName>Vericon</fullName>
            </value>
            <value>
                <fullName>VerifiedFirst</fullName>
            </value>
            <value>
                <fullName>Yardstik</fullName>
            </value>
            <value>
                <fullName>Zinc</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>