force-app/main/default/objects/Account/fields/Churn_if_Auto_Debit_is_Enforced__c.field-meta.xml
<CustomField>
    <fullName>Churn_if_Auto_Debit_is_Enforced__c</fullName>
    <description>Used by &quot;Account Direct Debit Approval&quot; flow</description>
    <label>Churn if Auto Debit is Enforced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>