force-app/main/default/objects/Account/fields/Churned__c.field-meta.xml
<CustomField>
    <fullName>Churned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the AM to document if a customer has churned. If a TM is still live but the customer moved to a competitor, this box should be ticked</description>
    <inlineHelpText>If a TM is still live but the customer moved to a competitor, this box should be ticked</inlineHelpText>
    <label>Churned</label>
    <type>Checkbox</type>
</CustomField>