force-app/main/default/objects/Account/fields/Churned_to_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Churned_to_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To document accounts that are partially/totally churned to the competition.</description>
    <inlineHelpText>Add the name of the competitor the account may turn to/will turn to.</inlineHelpText>
    <label>Churned to Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>