force-app/main/default/objects/Account/fields/Clay_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Clay_Attribution__c</fullName>
    <label>Clay Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clay Sourced</fullName>
            </value>
            <value>
                <fullName>Clay Reactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>