force-app/main/default/objects/Account/fields/Clay_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Clay_Company_Name__c</fullName>
    <label>Clay Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>