force-app/main/default/objects/Account/fields/Clay_Hybrid__c.field-meta.xml
<CustomField>
    <fullName>Clay_Hybrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the criteria are met to trigger automatic outbound through Clay.</description>
    <label>Clay Hybrid</label>
    <type>Checkbox</type>
</CustomField>