force-app/main/default/objects/Account/fields/Clay_Signals_Account__c.field-meta.xml
<CustomField>
    <fullName>Clay_Signals_Account__c</fullName>
    <label>Clay Signals &quot;Account&quot;</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>