force-app/main/default/objects/Account/fields/Clay_Sourced_Date__c.field-meta.xml
<CustomField>
    <fullName>Clay_Sourced_Date__c</fullName>
    <label>Clay Sourced Date</label>
    <type>Date</type>
</CustomField>