force-app/main/default/objects/Account/fields/Clay_Type__c.field-meta.xml
<CustomField>
    <fullName>Clay_Type__c</fullName>
    <label>Clay Type</label>
    <type>TextArea</type>
</CustomField>