force-app/main/default/objects/Account/fields/Clearbit_Buying_Stage__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Buying_Stage__c</fullName>
    <description>Clearbit Buying Stage evaluates our buyer&apos;s journey by their oysterhr.com webpage engagement</description>
    <inlineHelpText>Clearbit Buying Stage evaluates our buyer&apos;s journey by their oysterhr.com webpage engagement</inlineHelpText>
    <label>Clearbit Buying Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>