force-app/main/default/objects/Account/fields/Clearbit_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Created_Time__c</fullName>
    <label>Clearbit Created Time</label>
    <type>DateTime</type>
</CustomField>