force-app/main/default/objects/Account/fields/Clearbit_Domain__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Domain__c</fullName>
    <description>Unformatted primary domain, populated by Clearbit enrichment.</description>
    <inlineHelpText>Unformatted primary domain, populated by Clearbit enrichment.</inlineHelpText>
    <label>Clearbit Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>