force-app/main/default/objects/Account/fields/Clearbit_Domain_Aliases__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Domain_Aliases__c</fullName>
    <description>A list of domains that redirect to the company&apos;s main website, enriched from Clearbit.</description>
    <inlineHelpText>A list of domains that redirect to the company&apos;s main website, enriched from Clearbit.</inlineHelpText>
    <label>Clearbit Domain Aliases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>