force-app/main/default/objects/Account/fields/Clearbit_Intent_Details__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Intent_Details__c</fullName>
    <description>Summary of each Clearbit website intent signal, and corresponding visit date.</description>
    <inlineHelpText>Summary of each Clearbit website intent signal, and corresponding visit date.</inlineHelpText>
    <label>Clearbit Intent Details</label>
    <type>TextArea</type>
</CustomField>