force-app/main/default/objects/Account/fields/Clearbit_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Last_Modified__c</fullName>
    <label>Clearbit Last Modified</label>
    <type>DateTime</type>
</CustomField>