force-app/main/default/objects/Account/fields/Clearbit_Most_Recent_Audience__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Most_Recent_Audience__c</fullName>
    <description>The most recent Clearbit audience the account joined</description>
    <inlineHelpText>The most recent Clearbit audience the account joined</inlineHelpText>
    <label>Clearbit Most Recent Audience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>