force-app/main/default/objects/Account/fields/Clearbit_Tech_Tags__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Tech_Tags__c</fullName>
    <description>Enriched from Clearbit, predefined list of relevant technologies.</description>
    <inlineHelpText>Enriched from Clearbit, predefined list of relevant technologies.</inlineHelpText>
    <label>Clearbit Tech Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clearbit_Tech_Tags</valueSetName>
    </valueSet>
</CustomField>