force-app/main/default/objects/Account/fields/Clients_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clients_Profile__c</fullName>
    <label>Clients Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>