force-app/main/default/objects/Account/fields/Closed_Lost_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Details__c</fullName>
    <inlineHelpText>Please select a Closed Lost Reason to save this record as Closed Lost</inlineHelpText>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>