force-app/main/default/objects/Account/fields/Closest_Future_Event_Account__c.field-meta.xml
<CustomField>
    <fullName>Closest_Future_Event_Account__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Future_Sales_Event__c)) &amp;&amp; NOT(ISBLANK(Future_Sales_Event_Lead__c)),
    IF(
        Future_Sales_Event__c &gt; Future_Sales_Event_Lead__c,
        Future_Sales_Event__c,
        Future_Sales_Event_Lead__c
    ),
    IF(
        NOT(ISBLANK(Future_Sales_Event__c)),
        Future_Sales_Event__c,
        IF(
            NOT(ISBLANK(Future_Sales_Event_Lead__c)),
            Future_Sales_Event_Lead__c,
            NULL
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Event - Account</label>
    <type>Date</type>
</CustomField>