force-app/main/default/objects/Account/fields/Closest_Future_Task_Account__c.field-meta.xml
<CustomField>
    <fullName>Closest_Future_Task_Account__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Future_Sales_Task__c)),
        NOT(ISBLANK(Future_Sales_Task_Lead__c))
    ),
    IF(
        Future_Sales_Task__c &gt; Future_Sales_Task_Lead__c,
        Future_Sales_Task__c,
        Future_Sales_Task_Lead__c
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closest Future Task - Account</label>
    <type>Date</type>
</CustomField>