force-app/main/default/objects/Account/fields/Comment_for_CS_Team__c.field-meta.xml
<CustomField>
    <fullName>Comment_for_CS_Team__c</fullName>
    <label>Comment for CS Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>