force-app/main/default/objects/Account/fields/Comment_hidden__c.field-meta.xml
<CustomField>
    <fullName>Comment_hidden__c</fullName>
    <description>to use for Forsythe account re-assignment</description>
    <label>Comment hidden</label>
    <type>TextArea</type>
</CustomField>