force-app/main/default/objects/Account/fields/Commercial_Value__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Value__c</fullName>
    <label>Commercial Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>