force-app/main/default/objects/Account/fields/Company_Employees_Clearbit__c.field-meta.xml
<CustomField>
    <fullName>Company_Employees_Clearbit__c</fullName>
    <description>Populated by DLRS.  The &quot;Company Employees&quot; on the related Clearbit record.</description>
    <label>Company Employees (Clearbit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>