force-app/main/default/objects/Account/fields/Company_Financials__c.field-meta.xml
<CustomField>
    <fullName>Company_Financials__c</fullName>
    <description>Used in Account Direct Debit approval</description>
    <label>Company Financials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>