force-app/main/default/objects/Account/fields/Company_Growth_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Company_Growth_Percentage__c</fullName>
    <label>Company Growth Percentage</label>
    <type>Text</type>
    <length>255</length>
    <description>Provides information about percentage growth of the company based on the employee size and open jobs information. Enrichment source: Clay.</description>
</CustomField> 