force-app/main/default/objects/Account/fields/Company_LinkedIn_Jobs_Page__c.field-meta.xml
<CustomField>
    <fullName>Company_LinkedIn_Jobs_Page__c</fullName>
    <formula>IF(
        RIGHT(Company_Linkedin_URL__c, 1) = &apos;/&apos;,
        LEFT(Company_Linkedin_URL__c, LEN(Company_Linkedin_URL__c) - 1),
        Company_Linkedin_URL__c
    ) + &apos;/jobs&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company LinkedIn - Jobs Page</label>
    <type>Text</type>
</CustomField>