force-app/main/default/objects/Account/fields/Company_LinkedIn_Sales_Navigator_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_LinkedIn_Sales_Navigator_URL__c</fullName>
    <label>Company LinkedIn Sales Navigator URL</label>
    <type>Url</type>
</CustomField>