force-app/main/default/objects/Account/fields/Company_Linkedin_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Linkedin_URL__c</fullName>
    <inlineHelpText>Provide the URL to the company’s official LinkedIn page for networking and professional outreach.</inlineHelpText>
    <label>Company Linkedin URL</label>
    <type>Url</type>
</CustomField>