force-app/main/default/objects/Account/fields/Company_Segment__c.field-meta.xml
<CustomField>
    <fullName>Company_Segment__c</fullName>
    <formula>IF(ISBLANK(NumberOfEmployees) || NumberOfEmployees = 0, &quot;Unknown&quot;,
   IF(NumberOfEmployees &lt;  249, &quot;SMB&quot;,
         IF(NumberOfEmployees &gt;= 250 &amp;&amp; NumberOfEmployees &lt;= 1000, &quot;Mid-Market&quot;,
            &quot;Enterprise&quot;
         )
      )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Segment</label>
    <type>Text</type>
</CustomField>