force-app/main/default/objects/Account/fields/Company_Segment_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Company_Segment_Stamp__c</fullName>
    <label>Company Segment Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company_Segment_Stamp</valueSetName>
    </valueSet>
</CustomField>