force-app/main/default/objects/Account/fields/Company_size__c.field-meta.xml
<CustomField>
    <fullName>Company_size__c</fullName>
    <description>Field populated by cognism</description>
    <label>Company size (Cognism)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>