force-app/main/default/objects/Account/fields/Company_size_employee__c.field-meta.xml
<CustomField>
    <fullName>Company_size_employee__c</fullName>
    <formula>IF((ISBLANK(Company_Employees_Clearbit__c) || Company_Employees_Clearbit__c = 0) &amp;&amp; ISBLANK(NumberOfEmployees), &quot;SMB&quot;,

IF(BLANKVALUE(IF(Company_Employees_Clearbit__c = 0, NULL,Company_Employees_Clearbit__c),NumberOfEmployees) &lt; 251, &quot;SMB&quot;,
IF(BLANKVALUE(IF(Company_Employees_Clearbit__c = 0, NULL,Company_Employees_Clearbit__c),NumberOfEmployees) &lt; 501, &quot;Mid Market&quot;,
IF(BLANKVALUE(IF(Company_Employees_Clearbit__c = 0, NULL,Company_Employees_Clearbit__c),NumberOfEmployees) &gt; 5000, &quot;Enterprise&quot;, &quot;&quot;
)))

)</formula>
    <label>zzz_Company size</label>
    <type>Text</type>
</CustomField>