force-app/main/default/objects/Account/fields/Contact_Department__c.field-meta.xml
<CustomField>
    <fullName>Contact_Department__c</fullName>
    <description>Comma-separated list of all Department values on related contacts.</description>
    <inlineHelpText>Specify the department of the primary contact within the company.</inlineHelpText>
    <label>Contact Department</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>