force-app/main/default/objects/Account/fields/Contact_Seniority__c.field-meta.xml
<CustomField>
    <fullName>Contact_Seniority__c</fullName>
    <inlineHelpText>Indicate the seniority level of the primary contact within the company.</inlineHelpText>
    <label>Contact Seniority</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>