force-app/main/default/objects/Account/fields/Contacts_Touched_in_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Touched_in_Last_90_Days__c</fullName>
    <label># Contacts Touched in Last 90 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>